[package]
name = "actix-quick-extract"
version = "0.1.0-beta.0"
edition = "2021"
authors = ["Wyatt Herkamp <wherkamp@gmail.com"]
repository = "https://github.com/wyatt-herkamp/actix-quick-extract"
license = "MIT OR Apache-2.0"
description = "A library for extracting data from actix-web requests"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
log = { version = "0.4" }
derive_more = { version = "1.0.0-beta.6", features = [
    "display",
    "into",
    "deref",
    "as_ref",
    "from",
] }
futures-util = "0.3"
